asm-lex/tests/snapshots/snapshot_llvm__riscv_elf@verbose.s.snap
---
source: asm-lex/tests/snapshot-llvm.rs
expression: snap_items
input_file: asm-lex/tests/fixtures/llvm/riscv_elf/verbose.s
---
[
    Item {
        span: 1..17 ".attribute\t4, 16",
        kind: Directive {
            name: 1..11 ".attribute",
            args: Some(
                12..17 "4, 16",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 19..119 ".attribute\t5, \"rv64i2p1_m2p0_a2p1_f2p2_d2p2_c2p0_zicsr2p0_zmmul1p0_zaamo1p0_zalrsc1p0_zca1p0_zcd1p0\"",
        kind: Directive {
            name: 19..29 ".attribute",
            args: Some(
                30..119 "5, \"rv64i2p1_m2p0_a2p1_f2p2_d2p2_c2p0_zicsr2p0_zmmul1p0_zaamo1p0_zalrsc1p0_zca1p0_zcd1p0\"",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 121..142 ".file\t\"hello-world.c\"",
        kind: Directive {
            name: 121..126 ".file",
            args: Some(
                127..142 "\"hello-world.c\"",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 144..149 ".text",
        kind: Directive {
            name: 144..149 ".text",
            args: None,
        },
        starts_line: true,
    },
    Item {
        span: 151..162 ".globl\tmain",
        kind: Directive {
            name: 151..157 ".globl",
            args: Some(
                158..162 "main",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 190..214 "# -- Begin function main",
        kind: Comment,
        starts_line: false,
    },
    Item {
        span: 216..226 ".p2align\t1",
        kind: Directive {
            name: 216..224 ".p2align",
            args: Some(
                225..226 "1",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 228..248 ".type\tmain,@function",
        kind: Directive {
            name: 228..233 ".type",
            args: Some(
                234..248 "main,@function",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 249..254 "main:",
        kind: Label {
            name: 249..253 "main",
        },
        starts_line: true,
    },
    Item {
        span: 289..296 "# @main",
        kind: Comment,
        starts_line: false,
    },
    Item {
        span: 297..305 "# %bb.0:",
        kind: Comment,
        starts_line: true,
    },
    Item {
        span: 307..323 "addi\tsp, sp, -16",
        kind: Instruction {
            mnemonic: 307..311 "addi",
            args: Some(
                312..323 "sp, sp, -16",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 325..337 "sd\tra, 8(sp)",
        kind: Instruction {
            mnemonic: 325..327 "sd",
            args: Some(
                328..337 "ra, 8(sp)",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 360..381 "# 8-byte Folded Spill",
        kind: Comment,
        starts_line: false,
    },
    Item {
        span: 383..395 "sd\ts0, 0(sp)",
        kind: Instruction {
            mnemonic: 383..385 "sd",
            args: Some(
                386..395 "s0, 0(sp)",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 418..439 "# 8-byte Folded Spill",
        kind: Comment,
        starts_line: false,
    },
    Item {
        span: 441..456 "addi\ts0, sp, 16",
        kind: Instruction {
            mnemonic: 441..445 "addi",
            args: Some(
                446..456 "s0, sp, 16",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 457..469 ".Lpcrel_hi0:",
        kind: Label {
            name: 457..468 ".Lpcrel_hi0",
        },
        starts_line: true,
    },
    Item {
        span: 471..498 "auipc\ta0, %pcrel_hi(.L.str)",
        kind: Instruction {
            mnemonic: 471..476 "auipc",
            args: Some(
                477..498 "a0, %pcrel_hi(.L.str)",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 500..535 "addi\ta0, a0, %pcrel_lo(.Lpcrel_hi0)",
        kind: Instruction {
            mnemonic: 500..504 "addi",
            args: Some(
                505..535 "a0, a0, %pcrel_lo(.Lpcrel_hi0)",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 537..546 "call\tputs",
        kind: Instruction {
            mnemonic: 537..541 "call",
            args: Some(
                542..546 "puts",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 548..556 "li\ta0, 0",
        kind: Instruction {
            mnemonic: 548..550 "li",
            args: Some(
                551..556 "a0, 0",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 558..570 "ld\tra, 8(sp)",
        kind: Instruction {
            mnemonic: 558..560 "ld",
            args: Some(
                561..570 "ra, 8(sp)",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 593..615 "# 8-byte Folded Reload",
        kind: Comment,
        starts_line: false,
    },
    Item {
        span: 617..629 "ld\ts0, 0(sp)",
        kind: Instruction {
            mnemonic: 617..619 "ld",
            args: Some(
                620..629 "s0, 0(sp)",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 652..674 "# 8-byte Folded Reload",
        kind: Comment,
        starts_line: false,
    },
    Item {
        span: 676..691 "addi\tsp, sp, 16",
        kind: Instruction {
            mnemonic: 676..680 "addi",
            args: Some(
                681..691 "sp, sp, 16",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 693..696 "ret",
        kind: Instruction {
            mnemonic: 693..696 "ret",
            args: None,
        },
        starts_line: true,
    },
    Item {
        span: 697..709 ".Lfunc_end0:",
        kind: Label {
            name: 697..708 ".Lfunc_end0",
        },
        starts_line: true,
    },
    Item {
        span: 711..739 ".size\tmain, .Lfunc_end0-main",
        kind: Directive {
            name: 711..716 ".size",
            args: Some(
                717..739 "main, .Lfunc_end0-main",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 780..797 "# -- End function",
        kind: Comment,
        starts_line: true,
    },
    Item {
        span: 799..819 ".type\t.L.str,@object",
        kind: Directive {
            name: 799..804 ".type",
            args: Some(
                805..819 ".L.str,@object",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 837..844 "# @.str",
        kind: Comment,
        starts_line: false,
    },
    Item {
        span: 846..887 ".section\t.rodata.str1.1,\"aMS\",@progbits,1",
        kind: Directive {
            name: 846..854 ".section",
            args: Some(
                855..887 ".rodata.str1.1,\"aMS\",@progbits,1",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 888..895 ".L.str:",
        kind: Label {
            name: 888..894 ".L.str",
        },
        starts_line: true,
    },
    Item {
        span: 897..920 ".asciz\t\"Hello World!\\n\"",
        kind: Directive {
            name: 897..903 ".asciz",
            args: Some(
                904..920 "\"Hello World!\\n\"",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 922..938 ".size\t.L.str, 14",
        kind: Directive {
            name: 922..927 ".size",
            args: Some(
                928..938 ".L.str, 14",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 941..961 ".ident\t\"<toolchain>\"",
        kind: Directive {
            name: 941..947 ".ident",
            args: Some(
                948..961 "\"<toolchain>\"",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 963..1002 ".section\t\".note.GNU-stack\",\"\",@progbits",
        kind: Directive {
            name: 963..971 ".section",
            args: Some(
                972..1002 "\".note.GNU-stack\",\"\",@progbits",
            ),
        },
        starts_line: true,
    },
    Item {
        span: 1004..1012 ".addrsig",
        kind: Directive {
            name: 1004..1012 ".addrsig",
            args: None,
        },
        starts_line: true,
    },
    Item {
        span: 1014..1031 ".addrsig_sym puts",
        kind: Directive {
            name: 1014..1026 ".addrsig_sym",
            args: Some(
                1027..1031 "puts",
            ),
        },
        starts_line: true,
    },
]
